2008-02-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-util.el (gnus-y-or-n-p, gnus-y-or-n-p): Update comments.

2008-02-14  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmail.el (nnmail-message-id-cache-file): Derive from
	`gnus-home-directory'.

2008-02-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-unsent-separator): Add the Exim bounce
	separator.

2008-02-10  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-epg-sign): Remove skipped signers from the signer
	list.
	(mml2015-epg-encrypt): Remove skipped recipients/signers from the
	recipient/signer list.

2008-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (datarootdir): Define.
	(EMACS_COMP, install-el, install-elc, install-el-elc): Quote directory
	name that might contain whitespace.

2008-02-07  Tassilo Horn  <tassilo@member.fsf.org>

	* nnimap.el (nnimap-open-connection): Add "143" and "993" as default
	ports to the calls to `netrc-machine-user-or-password' in addition to
	"imap" and "imaps".

2008-02-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.el (gnus-group-startup-message): Add `find-image' call before
	image-load-path is let-bound.  Reported by Harald Hanche-Olsen
	<hanche@math.ntnu.no>.

2008-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-describe-bindings): Work for draft group.

	* gnus-xmas.el (gnus-xmas-article-describe-bindings): Ditto.

2008-01-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* sieve.el (sieve-make-overlay, sieve-overlay-put, sieve-overlays-at):
	* message.el (message-beginning-of-line): Use featurep instead of bound
	tests in order to resolve conditionals at compile time.

2008-01-24  Michael Sperber  <sperber@deinprogramm.de>

	* mail-source.el (mail-sources): Add `group' choice.

	* nnmail.el (nnmail-get-new-mail-1): Abstract this out to add another
	parameter `in-group' to control into which group the articles go.
	Add treatment of `group' mail-source.

2008-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>
